added variables and init function

--- a/index.html
+++ b/index.html
@@ -4,42 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game </title>
-    <script src="index.js"></script>
+    <script defer src="index.js"></script>
     <link rel="stylesheet" href="index.css">
+    <script src="https://kit.fontawesome.com/1b47f7c9a4.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>Memory Game</header>
     <p>Flip two cards that are the same to win</p>
-
-    <h2 id="message"></h2>
-
+    <h3 id="timer"></h3>
+    <h3 id="message"></h3>
     <Section id="board">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-
+        <div class="card" data-card="fa-volleyball" id="0"></div>
+        <div class="card" data-card="fa-volleyball" id="1"></div>
+        <div class="card" data-card="fa-dumbbell" id="2"></div>
+        <div class="card" data-card="fa-dumbbell" id="3"></div>
+        <div class="card" data-card="fa-person-swimming" id="4"></div>
+        <div class="card" data-card="fa-person-swimming" id="5"></div>
+        <div class="card" data-card="fa-futbol" id="6"></div>
+        <div class="card" data-card="fa-futbol" id="7"></div>
+        <div class="card" data-card="fa-basketball" id="8"></div>
+        <div class="card" data-card="fa-basketball" id="9"></div>
+        <div class="card" data-card="fa-football" id="10"></div>
+        <div class="card" data-card="fa-football" id="11"></div>
+        <div class="card" data-card="fa-medal" id="12"></div>
+        <div class="card" data-card="fa-medal" id="13"></div>  
+        <div class="card" data-card="fa-bowling-ball" id="14"></div>
+        <div class="card" data-card="fa-bowling-ball" id="15"></div>
+        <div class="card" data-card="fa-motorcycle" id="16"></div>
+        <div class="card" data-card="fa-motorcycle" id="17"></div>
+        <div class="card" data-card="fa-heart" id="18"></div>
+        <div class="card" data-card="fa-heart" id="19"></div>
     </Section>
-    <button id="reset">Reset Game</button>
-    
+    <button id="reset">Reset Game</button> 
 </body>
 </html>
