wip: added click handle function

--- a/index.html
+++ b/index.html
@@ -10,31 +10,33 @@
 </head>
 <body>
     <header>Memory Game</header>
-    <p>Flip two cards that are the same to win</p>
-    <h3 id="timer"></h3>
-    <h3 id="message"></h3>
-    <Section id="board">
-        <div class="card" data-card="fa-volleyball" id="0"></div>
-        <div class="card" data-card="fa-volleyball" id="1"></div>
-        <div class="card" data-card="fa-dumbbell" id="2"></div>
-        <div class="card" data-card="fa-dumbbell" id="3"></div>
-        <div class="card" data-card="fa-person-swimming" id="4"></div>
-        <div class="card" data-card="fa-person-swimming" id="5"></div>
-        <div class="card" data-card="fa-futbol" id="6"></div>
-        <div class="card" data-card="fa-futbol" id="7"></div>
-        <div class="card" data-card="fa-basketball" id="8"></div>
-        <div class="card" data-card="fa-basketball" id="9"></div>
-        <div class="card" data-card="fa-football" id="10"></div>
-        <div class="card" data-card="fa-football" id="11"></div>
-        <div class="card" data-card="fa-medal" id="12"></div>
-        <div class="card" data-card="fa-medal" id="13"></div>  
-        <div class="card" data-card="fa-bowling-ball" id="14"></div>
-        <div class="card" data-card="fa-bowling-ball" id="15"></div>
-        <div class="card" data-card="fa-motorcycle" id="16"></div>
-        <div class="card" data-card="fa-motorcycle" id="17"></div>
-        <div class="card" data-card="fa-heart" id="18"></div>
-        <div class="card" data-card="fa-heart" id="19"></div>
-    </Section>
+  <h1>Match all the cards to win</h1>
+  <h3 id="timer"></h3>
+  <h3 id="message"></h3>
+
+  <Section id="board">
+    <img class="card" id="0" src="">
+    <img class="card" id="1" src="">
+    <img class="card" id="2" src="">
+    <img class="card" id="3" src="">
+    <img class="card" id="4" src="">
+    <img class="card" id="5" src="">
+    <img class="card" id="6" src="">
+    <img class="card" id="7" src="">
+    <img class="card" id="8" src="">
+    <img class="card" id="9" src="">
+    <img class="card" id="10" src="">
+    <img class="card" id="11" src="">
+    <img class="card" id="12" src="">
+    <img class="card" id="13" src="">
+    <img class="card" id="14" src="">
+    <img class="card" id="15" src="">
+    <img class="card" id="16" src="">
+    <img class="card" id="17" src="">
+    <img class="card" id="18" src="">
+    <img class="card" id="19" src="">
+  </Section>
+
     <button id="reset">Reset Game</button> 
 </body>
 </html>
