updated readme file

--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     <img class="card" id="19" src="">
   </Section>
 
-    <button id="reset">Reset Game</button> 
+    <button id="reset">Play Again</button> 
 </body>
 </html>
