--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <title>Memory Game </title>
     <script defer src="index.js"></script>
     <link rel="stylesheet" href="index.css">
-    <script src="https://kit.fontawesome.com/1b47f7c9a4.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>Memory Game</header>
   <h1>Match all the cards to win</h1>
   <h3 id="timer"></h3>
-  <h3 id="message"></h3>
+  <div><h3 id="message"></h3></div>
+  
 
   <Section id="board">
     <img class="card" id="0" src="">
@@ -36,7 +39,9 @@
     <img class="card" id="18" src="">
     <img class="card" id="19" src="">
   </Section>
-
+  <div id="button-container">
     <button id="reset">Play Again</button> 
+  </div>
+    
 </body>
 </html>
